tasks_page.dart Ui skeleton completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   hive: ^2.2.3
   equatable: ^2.0.5
   ionicons: ^0.2.1
+  calendar_timeline: ^1.0.5
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
