--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,20 +14,33 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-
+  # theming
   cupertino_icons: ^1.0.2
   bitsdojo_window: ^0.1.5
-  flutter_bloc: ^8.1.1
-  get_it: ^7.2.0
   google_fonts: ^3.0.1
-  hive: ^2.2.3
-  equatable: ^2.0.5
   ionicons: ^0.2.1
+
+  # state management
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
+
+  # dependency injection
+  get_it: ^7.2.0
+
+  # database
+  hive: ^2.2.3
+
+  # calenders
   calendar_timeline: ^1.0.5
   timeline_tile: ^2.0.0
-  intl: ^0.17.0
+
+  # charts
   flutter_heatmap_calendar: ^1.0.5
   syncfusion_flutter_charts: ^20.3.52
+
+  # utility
+  intl: ^0.17.0
+
 
 dev_dependencies:
   flutter_test:
