--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,11 +51,14 @@ dependencies:
   dartz: ^0.10.1
 
 
+
+
 dev_dependencies:
   test: ^1.16.0
-  bloc_test: ^9.0.0
   flutter_lints: ^2.0.0
-
+  build_runner: ^2.3.0
+  bloc_test: ^9.0.0
+  mockito: ^5.3.2
   flutter_test:
     sdk: flutter
 
