--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,11 @@ dependencies:
   # dependency injection
   get_it: ^7.2.0
 
-  # database
+  # database and storage
   hive_flutter: ^1.1.0
   sqflite: ^2.2.1
   path_provider: ^2.0.11
+  flutter_secure_storage: ^7.0.1
 
   # generators
   uuid: ^3.0.7
@@ -52,6 +53,7 @@ dependencies:
 
   # sensors
   vibration: ^1.7.6
+  audio_manager: ^0.8.2
 
 dev_dependencies:
   test: ^1.16.0
