min(workflows): add new branches
add new required branches to the workflows to test and fix error

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop, hotfix/worker-issue ]
 
 jobs:
   build_android:
