--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_fonts: ^3.0.1
   ionicons: ^0.2.1
   flutter_spinkit: ^5.1.0
+  flex_color_scheme: ^6.1.2
 
   # state management
   flutter_bloc: ^8.1.1
