--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   intl: ^0.17.0
   flutter_datetime_picker: ^1.5.1
   dartz: ^0.10.1
-  awesome_notifications:
+  awesome_notifications: ^0.7.4+1
 
   # sensors
   vibration: ^1.7.6
