feat: add a welcome notification with new app icon

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
             android:label="pomodoro"
             android:name="${applicationName}"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/launcher_icon"
             android:usesCleartextTraffic="true">
         <activity
                 android:name=".MainActivity"
