--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   flex_color_scheme: ^6.1.2
   flutter_launcher_icons: ^0.11.0
+  rive: ^0.7.1
 
   # state management
   flutter_bloc: ^8.1.1
