--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,18 +21,13 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-def flutterCompileSdkVersion = localProperties.getProperty('flutter.compileSdkVersion')
-if (flutterCompileSdkVersion == null) {
-    flutterCompileSdkVersion = 33
-}
-
 def flutterMinSdkVersion = localProperties.getProperty('flutter.minSdkVersion')
 if (flutterMinSdkVersion == null)
     flutterMinSdkVersion = 23
 
 def flutterTargetSdkVersion = localProperties.getProperty('flutter.targetSdkVersion')
 if (flutterTargetSdkVersion == null)
-    flutterTargetSdkVersion = 33
+    flutterTargetSdkVersion = 31
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
@@ -46,7 +41,7 @@ if (keystorePropertiesFile.exists()) {
 
 
 android {
-    compileSdkVersion flutterCompileSdkVersion
+    compileSdkVersion 33
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -67,8 +62,8 @@ android {
         applicationId "im.mahmoud.pomodoro"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutterMinSdkVersion
-        targetSdkVersion flutterTargetSdkVersion
+        minSdkVersion 31
+        targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
