--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,9 @@ jobs:
       - name: Get packages
         run: flutter pub get
 
+      - name: Run tests
+        run: flutter test
+
       - name: Build android app
         run: flutter build apk --release
 
