feat: increase version code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: pomodore
 description: A new Flutter project.
 
-publish_to: 'none'
+publish_to: "none"
 
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -94,7 +94,6 @@ flutter:
   assets:
     - assets/images/
     - assets/sounds/
-
 
   fonts:
     - family: sspro
