--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   push:
-    branches: [main, develop, feature/apk-uploader]
+    branches: [main, develop]
 
 jobs:
   build_android:
