--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none"
 
-version: 1.2.0+5
+version: 1.2.1+5
 
 environment:
   sdk: ">=2.18.2 <3.0.0"
@@ -37,6 +37,8 @@ dependencies:
   sqflite: ^2.2.1
   path_provider: ^2.0.11
   flutter_secure_storage: ^7.0.1
+  isar:
+  isar_flutter_libs:
 
   # generators
   uuid: ^3.0.7
@@ -66,6 +68,7 @@ dev_dependencies:
   test: ^1.16.0
   flutter_lints: ^2.0.0
   build_runner: ^2.3.0
+  isar_generator:
   bloc_test: ^9.0.0
   mockito: ^5.3.2
   flutter_test:
@@ -76,18 +79,7 @@ flutter_icons:
   ios: true
   image_path: "assets/images/app_icon.png"
   min_sdk_android: 21
-#  web:
-#    generate: true
-#    image_path: "path/to/image.png"
-#    background_color: "#hexcode"
-#    theme_color: "#hexcode"
-#  windows:
-#    generate: true
-#    image_path: "path/to/image.png"
-#    icon_size: 48
-#  macos:
-#    generate: true
-#    image_path: "path/to/image.png"
+
 
 flutter:
   generate: true
@@ -107,11 +99,3 @@ flutter:
     - family: oswald
       fonts:
         - asset: fonts/Oswald-Regular.ttf
-
-    #       - asset: fonts/Schyler-Italic.ttf
-    #         style: italic
-    #   - family: Trajan Pro
-    #     fonts:
-    #       - asset: fonts/TrajanPro.ttf
-    #       - asset: fonts/TrajanPro_Bold.ttf
-    #         weight: 700
