--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: "none"
 version: 1.2.1+5
 
 environment:
-  sdk: ">=2.18.2 <3.0.0"
+  sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -17,7 +17,7 @@ dependencies:
   # theming
   cupertino_icons: ^1.0.2
   bitsdojo_window: ^0.1.5
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.4
   ionicons: ^0.2.1
   flutter_spinkit: ^5.1.0
   flex_color_scheme: ^6.1.2
@@ -37,8 +37,8 @@ dependencies:
   sqflite: ^2.2.1
   path_provider: ^2.0.11
   flutter_secure_storage: ^7.0.1
-  isar:
-  isar_flutter_libs:
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
 
   # generators
   uuid: ^3.0.7
@@ -54,10 +54,13 @@ dependencies:
   fl_chart: ^0.61.0
 
   # utility
-  intl: ^0.17.0
-  flutter_datetime_picker: ^1.5.1
+  intl: ^0.18.0
+  #  flutter_datetime_picker: ^1.5.1
   dartz: ^0.10.1
-  awesome_notifications: ^0.7.4+1
+  awesome_notifications:
+    git:
+      url: https://github.com/mbfakourii/awesome_notifications.git
+      ref: ef2eb8a766fb12bf1fe1a8f49dc0ce333272abf5
 
   # sensors
   vibration: ^1.7.6
@@ -68,7 +71,7 @@ dev_dependencies:
   test: ^1.16.0
   flutter_lints: ^2.0.0
   build_runner: ^2.3.0
-  isar_generator:
+  isar_generator: ^3.1.0+1
   bloc_test: ^9.0.0
   mockito: ^5.3.2
   flutter_test:
