--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, feature/notification ]
 
 jobs:
   build_android:
